fix: top align recipe/deconstruct items

--- a/src/components/DeconstructRecipeView/DeconstructRecipeView.scss
+++ b/src/components/DeconstructRecipeView/DeconstructRecipeView.scss
@@ -1,7 +1,6 @@
 .deconstruct-item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   height: 100%;
   padding: 4px 0;
 
