--- a/src/views/ItemsPage/ItemsPage.scss
+++ b/src/views/ItemsPage/ItemsPage.scss
@@ -101,7 +101,6 @@
 .item-recipe {
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .item-actions {
